--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.7"
 services:
-  mockServer:
+  mock-server:
     image: mockserver/mockserver:mockserver-snapshot
     ports:
       - 8080:1080
