--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports:
       - 8080:1080
     environment:
-      MOCKSERVER_PROPERTY_FILE: ./mockserver.properties
-      MOCKSERVER_INITIALIZATION_JSON_PATH: ./init.json
+      MOCKSERVER_PROPERTY_FILE: mockserver.properties
+      MOCKSERVER_INITIALIZATION_JSON_PATH: init.json
