--- a/mockserver.properties
+++ b/mockserver.properties
@@ -19,6 +19,8 @@ mockserver.sslCertificateDomainName=localhost
 mockserver.sslSubjectAlternativeNameDomains=www.example.com,www.another.com
 # comma separated list of ip addresses for Subject Alternative Name ips (default empty list)
 mockserver.sslSubjectAlternativeNameIps=127.0.0.1
+# json file path for initilization
+mockserver.initializationJsonPath=./init.json
 
 # CORS
 
